2022-03-09  Antti Koivisto  <antti@apple.com>

        [CSS Container Queries] Remove size() function syntax
        https://bugs.webkit.org/show_bug.cgi?id=237639

        Reviewed by Antoine Quint.

        Per https://github.com/w3c/csswg-drafts/issues/6870

        * css/ContainerQueryParser.cpp:
        (WebCore::ContainerQueryParser::consumeContainerQuery):
        * css/parser/CSSPropertyParserHelpers.cpp:
        (WebCore::CSSPropertyParserHelpers::consumeSingleContainerName):

        Also disallow strings as container names (they need to be identifiers).

2022-03-09  Fujii Hironori  <Hironori.Fujii@sony.com>

        [WinCairo] SpatialNavigation.h(93): error C2365: 'WebCore::None': redefinition; previous definition was 'enumerator'
        https://bugs.webkit.org/show_bug.cgi?id=237647

        Unreviewed build fix.

        Changed WebCore::RectsAlignment to an enum class.

        * page/FocusController.cpp:
        (WebCore::updateFocusCandidateIfNeeded):
        * page/SpatialNavigation.cpp:
        (WebCore::FocusCandidate::FocusCandidate):
        (WebCore::alignmentForRects):
        (WebCore::distanceDataForNode):
        * page/SpatialNavigation.h:
        (WebCore::FocusCandidate::FocusCandidate):
        (): Deleted.

2022-03-09  Antoine Quint  <graouts@webkit.org>

        [web-animations] color-interpolation-filters should support discrete animation
        https://bugs.webkit.org/show_bug.cgi?id=237637

        Reviewed by Antti Koivisto.

        * animation/CSSPropertyAnimation.cpp:
        (WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):
        * rendering/style/RenderStyle.h:
        (WebCore::RenderStyle::colorInterpolationFilters const):
        (WebCore::RenderStyle::setColorInterpolationFilters):

2022-03-08  Antoine Quint  <graouts@webkit.org>

        [web-animations] clip-rule should support discrete animations
        https://bugs.webkit.org/show_bug.cgi?id=237609

        Reviewed by Antti Koivisto.
